package com.ifgoiano.mvppattern.presenter;

public class CountriesRemoteRepositoryPresenter {
}
