@startuml

title __PRESENTER's Class Diagram__\n

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter {
          + CountriesAPIPresenter()
          + onRefresh()
          - fetchCountries()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      interface com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View {
          {abstract} + onError()
          {abstract} + setValues()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter {
          {static} - DATABASE_NAME : String
          {static} - DATABASE_VERSION : int
          {static} - ID : String
          {static} - TABLE_NAME : String
          {static} - name : String
          + CountriesLocalRepositoryPresenter()
          + addCountry()
          + deleteCountry()
          + getAllCountries()
          + getCountry()
          + getToltalRegistersCount()
          + onCreate()
          + onUpgrade()
          + updateCountry()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      interface com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View {
          {abstract} + getAllCountries()
          {abstract} + getCountry()
          {abstract} + getTotalRegistersCount()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace presenter {
      class com.ifgoiano.mvppattern.presenter.CountriesRemoteRepositoryPresenter {
      }
    }
  }
  

  com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter o-- com.ifgoiano.mvppattern.presenter.api.CountriesAPIService : service
  com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter o-- com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View : view
  com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter +-down- com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View
  com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter -up-|> android.database.sqlite.SQLiteOpenHelper
  com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter o-- com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View : view
  com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter +-down- com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
